<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradeb"
    android:gravity="top"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:text="@string/estado"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="39dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aceptado" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/en_espera" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/negado" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:src="@drawable/check_r"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:src="@drawable/wait_r"
            android:contentDescription="@string/todo" />
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/denied_r"
            android:contentDescription="@string/todo" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etbuscarr"
            android:layout_width="399dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Ingrese el codigo del reporte"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bbuscarr"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:text="Buscar" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>



    <ListView
        android:id="@+id/renviados"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


</LinearLayout>